refactor: create a cluster api request structure
