# src/docs/swagger.json
@@ -75,30 +75,24 @@
                         "required": true
                     },
                     {
-                        "minimum": 1,
                         "type": "integer",
                         "description": "if Control-Plane, \u003e= 2",
                         "name": "cpu-min",
                         "in": "query"
                     },
                     {
-                        "maximum": 99999,
-                        "minimum": 1,
                         "type": "integer",
                         "description": " \u003c= 99999",
                         "name": "cpu-max",
                         "in": "query"
                     },
                     {
-                        "minimum": 1,
                         "type": "integer",
                         "description": " if Control-Plane, \u003e= 2",
                         "name": "memory-min",
                         "in": "query"
                     },
                     {
-                        "maximum": 99999,
-                        "minimum": 1,
                         "type": "integer",
                         "description": " \u003c= 99999",
                         "name": "memory-max",
@@ -177,24 +171,6 @@
                         "type": "string",
                         "description": "Namespace ID",
                         "name": "namespace",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "enum": [
-                            "1.18",
-                            "1.23"
-                        ],
-                        "type": "string",
-                        "description": "string enums",
-                        "name": "minorversion",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Patch version",
-                        "name": "patchversion",
                         "in": "path",
                         "required": true
                     },
@@ -558,6 +534,11 @@
         "app.ClusterConfigKubernetesReq": {
             "type": "object",
             "properties": {
+                "loadbalancer": {
+                    "type": "string",
+                    "default": "haproxy",
+                    "example": "haproxy"
+                },
                 "networkCni": {
                     "type": "string",
                     "enum": [
@@ -577,13 +558,32 @@
                 "serviceDnsDomain": {
                     "type": "string",
                     "example": "cluster.local"
+                },
+                "storageclass": {
+                    "type": "object",
+                    "properties": {
+                        "nfs": {
+                            "type": "object",
+                            "$ref": "#/definitions/app.ClusterStorageClassNfsReq"
+                        }
+                    }
+                },
+                "version": {
+                    "type": "string",
+                    "example": "1.23.13"
                 }
             }
         },
         "app.ClusterConfigReq": {
             "type": "object",
             "properties": {
+                "installMonAgent": {
+                    "type": "string",
+                    "default": "yes",
+                    "example": "no"
+                },
                 "kubernetes": {
+                    "type": "object",
                     "$ref": "#/definitions/app.ClusterConfigKubernetesReq"
                 }
             }
@@ -592,6 +592,7 @@
             "type": "object",
             "properties": {
                 "config": {
+                    "type": "object",
                     "$ref": "#/definitions/app.ClusterConfigReq"
                 },
                 "controlPlane": {
@@ -603,25 +604,12 @@
                 "description": {
                     "type": "string"
                 },
-                "installMonAgent": {
-                    "type": "string",
-                    "default": "yes",
-                    "example": "no"
-                },
                 "label": {
                     "type": "string"
-                },
-                "loadbalancer": {
-                    "type": "string",
-                    "default": "haproxy",
-                    "example": "haproxy"
                 },
                 "name": {
                     "type": "string",
                     "example": "cluster-01"
-                },
-                "storageclass": {
-                    "$ref": "#/definitions/app.ClusterStorageClassReq"
                 },
                 "worker": {
                     "type": "array",
@@ -641,14 +629,6 @@
                 "server": {
                     "type": "string",
                     "example": "163.154.154.89"
-                }
-            }
-        },
-        "app.ClusterStorageClassReq": {
-            "type": "object",
-            "properties": {
-                "nfs": {
-                    "$ref": "#/definitions/app.ClusterStorageClassNfsReq"
                 }
             }
         },
@@ -680,13 +660,18 @@
                     "type": "integer",
                     "example": 3
                 },
-                "rootDiskSize": {
-                    "type": "string",
-                    "example": "default"
-                },
-                "rootDiskType": {
-                    "type": "string",
-                    "example": "default"
+                "rootDisk": {
+                    "type": "object",
+                    "properties": {
+                        "size": {
+                            "type": "string",
+                            "example": "default"
+                        },
+                        "type": {
+                            "type": "string",
+                            "example": "default"
+                        }
+                    }
                 },
                 "spec": {
                     "type": "string",
@@ -770,6 +755,7 @@
                     }
                 },
                 "status": {
+                    "type": "object",
                     "$ref": "#/definitions/model.ClusterStatus"
                 }
             }
